# agentslate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  about.toml
.github/workflows/: ci.yml
docs/: AGENT_INPUT_RESEARCH.md  IMPLEMENTATION_TRACKER.md  PRD.md  PROTOCOL.md  RELEASE_CHECKLIST.md  _config.yml  index.md  privacy.md  rust-dependency-licenses.md  support.md
ios/: ExportOptions-TestFlight.plist
ios/AgentSlate/: AgentSlateApp.swift  AppModel.swift  ContentView.swift
ios/AgentSlate.xcodeproj/: project.pbxproj
ios/AgentSlate.xcodeproj/xcshareddata/xcschemes/: AgentSlate.xcscheme
ios/AgentSlate/Assets.xcassets/AgentCline.imageset/: Contents.json
ios/AgentSlateTests/: AppModelTests.swift
ios/HerdrRemoteKeypad/: AppModel.swift  ContentView.swift  HerdrRemoteKeypadApp.swift  VoiceDictationController.swift
ios/HerdrRemoteKeypad.xcodeproj/: project.pbxproj
ios/HerdrRemoteKeypadTests/: AppModelTests.swift
packaging/: rust-licenses.hbs
packaging/homebrew/: agentslate.rb
src/: devices.rs  herdr.rs  lib.rs  main.rs  probe.rs  protocol.rs  server.rs  token.rs
swift-client/: Package.swift
swift-client/Sources/AgentSlateClient/: BridgeClient.swift  FrameDecoder.swift  Models.swift
swift-client/Sources/HerdrRemoteClient/: BridgeClient.swift  Models.swift
swift-client/Tests/AgentSlateClientTests/: BridgeClientTests.swift  ModelsAndFramesTests.swift
swift-client/Tests/HerdrRemoteClientTests/: BridgeClientTests.swift  ModelsAndFramesTests.swift
(+11 files in other folders)
