[package]
name = "herdr-remote-keypad"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Tailscale-only remote keypad bridge for Herdr agents"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
